# music-rag-recommender

./: .env.example  .gitignore  README.md  dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: collector.py  data_collection.py  smoke_test.py
src/api/: main.py
src/corpus/: db.py  enrich.py  enrich_artist.py  enrich_lyrics.py  genius_client.py  lastfm_client.py  retry.py  schemas.py  seeds.py
src/corpus/schema_changes/: add_artist_tags.py  add_track_documents.py
src/embedding/: embed.py  index.py  synthesise.py
src/evaluation/: baselines.py  llm_judge.py  metrics.py  query_set.py  run_eval.py
src/generation/: generate.py  prompt.py
src/resolution/: spotify.py
src/retrieval/: query.py
